<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemMunicipaleLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <!--
         <ImageView
        android:id="@+id/imgItemMinicipale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/book2" />
    -->

  

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <!-- Titre -->


        <!--  -->

        <TextView
            android:id="@+id/titreMuni"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14dip" />

        <!--
             <TextView
            android:id="@+id/titrePublieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dip"
            android:text="@string/TitlePublie" />



        -->

        <TextView
            android:id="@+id/titrePublie"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12dip" />
      
        <TextView
            android:id="@+id/Titleauteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleAuteur"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/auteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/TitleFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleFormat"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/TitleCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleCollection"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/TitleContenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleContenu"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/contenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typededocumentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleTypedeDocument"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/typededocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/autreInformationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleAutreInformation"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/autreInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dip" />

        <TextView
            android:id="@+id/hiddenTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10dip" />

        <!-- Auteur -->

        <TextView
            android:id="@+id/hiddenCreator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dip" />

        <!-- Autre information -->

    </LinearLayout>

</LinearLayout>