<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_linear_layout_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="#eee"
    android:gravity="bottom|center_horizontal"
    android:orientation="horizontal" 
    >

    <!--
        android:background="@drawable/background_action_bar_tiny" 
    style="@style/FooterBarButton" 
    ic_input_get"
    
    collections_labels-->

    <Button
        android:id="@+id/buttonGoogle"
       android:layout_width="38dp"
        android:layout_height="34dp"
        android:background="@drawable/googlebookgris"/>

    <TextView
        android:id="@+id/textViewGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dip"
        android:text="@string/RecordDetailPlusGoogle"
        android:textSize="12dip" />

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="40dp"
        android:layout_height="31dp"
        android:background="@drawable/location_place" />
	<!-- @android:drawable/ic_dialog_map -->
    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dip"
        android:text="@string/RecordDetailLocation"
        android:textSize="12dip" />

    <Button
        android:id="@+id/buttonWorldCat"
        android:layout_width="38dp"
        android:layout_height="34dp"
        android:background="@drawable/location_web_site" />

    <TextView
        android:id="@+id/textViewWorldCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dip"
        android:text="@string/RecordDetailPlusInfos"
        android:textSize="12dip" />

</LinearLayout>