<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutOnglet1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <!--
      <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    -->

    <EditText
        android:id="@+id/searchTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/search"
        android:text="@string/RechercheTexte"
        android:layout_marginTop="10dip"
        android:inputType="text"
        android:textStyle="italic"
         android:imeOptions="actionSearch"
        />

 <!--    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_background"
        android:paddingTop="7dip"
        android:text="@string/CritereRecherche"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="15dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip" /> -->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="7dip">

        <!-- @android:drawable/ic_menu_myplaces -->

        <TextView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/double_right_arrow"
            android:drawablePadding="10dip"
            android:paddingTop="12dip"
            android:text="@string/RecherchePar"
            android:textStyle="bold"
            android:textSize="14dip" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/spinner_background_holo_dark"
            android:padding="5dip"
            android:spinnerMode="dialog" />

        <!--
                    style="@style/MyDropDownNav"
        
             <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="41dp"
            android:layout_height="15dp"
            android:background="@drawable/btn_toggle"
            android:text="Sort by"
            android:textOff=""
            android:textOn="" />
        -->


    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/ButtonText"
        android:padding="15dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        android:text="@string/RechercheButton" />

    <SlidingDrawer
        android:id="@+id/slidingDrawer"
        android:layout_width="wrap_content"      android:layout_height="match_parent"
        android:content="@+id/contentLayout"
        android:handle="@+id/drawerHandle" >

        <ImageView
            android:id="@+id/drawerHandle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_help" >
        </ImageView>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/contentLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:gravity="left"
                android:text="@string/help_message_onglet1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calames" />
        </LinearLayout>
    </SlidingDrawer>

</LinearLayout>